--- a/tutorials/7-input-output.ipynb
+++ b/tutorials/7-input-output.ipynb
@@ -178,20 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This will be on the same line.\n"
+      "This\twill be on the same line.\n"
      ]
     }
    ],
    "source": [
     "# Method 5: Using the end parameter to change the end character\n",
-    "print(\"This\", end=\" \")\n",
+    "print(\"This\", end=\"\\t\")\n",
     "print(\"will be on the same line.\")"
    ]
   },
@@ -329,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
